# visdemo-fusion-mcp

./: .env.example  .gitignore  README.md  Visdemo_Fusion_MCP_Implementation_Guide.docx  Visdemo_Fusion_MCP_Implementation_Guide_v2.docx  claude_desktop_config.example.json  push_to_github.py  pyproject.toml  requirements.txt  server.py  test_connection.py  ~$sdemo_Fusion_MCP_Implementation_Guide.docx
