[project]
name = "visdemo-fusion-mcp"
version = "0.1.0"
description = "MCP server connecting Claude to the Visdemo Oracle Fusion Cloud instance"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "oracledb>=2.0.0",
]

[project.scripts]
visdemo-fusion-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["."]
py-modules = ["server"]
